--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
+
+
+
 spring.datasource.url=jdbc:h2:mem:gestanca
 
 server.error.include-stacktrace=never
 
-spring.profiles.active=open
+spring.profiles.active=open,prod
