--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,13 @@
 # OracleDB connection settings
-spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
-spring.datasource.username=pf1389
-spring.datasource.password=fiap23
+# spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
+# spring.datasource.username=pf1389
+# spring.datasource.password=fiap23
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
+
+
 spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 
