env var profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.url=jdbc:h2:mem:gestanca
 
 server.error.include-stacktrace=never
 
-spring.profiles.active=open,prod
+spring.profiles.active=${PROFILE:open}
